--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 Flask==2.3.3
-Django==4.2.5
+Django~=5.1.7
 Pillow==10.0.0
 flask-wtf==1.1.1
 python-dotenv==1.0.0
+pip~=25.0
+MarkupSafe~=3.0.2
+Werkzeug~=3.1.3
+asgiref~=3.8.1
+sqlparse~=0.5.3
+click~=8.1.8
+blinker~=1.9.0
+Jinja2~=3.1.6
+itsdangerous~=2.2.0
+colorama~=0.4.6
+WTForms~=3.2.1
